--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -283,6 +283,33 @@ nav {
                     padding: .25rem 1rem;
                 }
             }
+
+            .collapse {
+                border-top: 1px solid $primary;
+                &.show {
+                    border-top: 1px solid rgba($color: white, $alpha: 0.5);
+                    transition: .2s all ease;
+                }
+            }
+
+            .submenu {
+                padding-left: 1rem;
+
+                .item {
+                    a {
+                        display: flex;
+                        align-items: center;
+                        img {
+                            height: 50px;
+                            margin-right: .5rem;
+                        }
+                    }
+                }
+                .submenu2 {
+                    padding-left: 1rem;
+                }
+            }
+
         }
     }
 }
